# discordMusic

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  constants.js  index.d.ts  index.js  index.test.js  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  run-docker.sh
.github/workflows/: test.yml
commands/: clear.js  commands.js  help.js  index.js  leave.js  pause.js  ping.js  ping.test.js  play.js  queue.js  shuffle.js  skip.js  stop.js  unpause.js
src/: main.rs  queue.rs  spotify.rs  spotify_embed.rs  utils.rs
src/commands/: clear.rs  join.rs  leave.rs  loop.rs  mod.rs  move.rs  pause.rs  ping.rs  play.rs  queue.rs  remove.rs  resume.rs  shuffle.rs  skip.rs  stop.rs  unpause.rs
utils/: embeds.js  music.js  utils.js
