[package]
name = "discordmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.6.1", default-features = false, features = ["cache"] }
rand = "0.9.1"
reqwest = { default-features = false, features = [
    "stream",
], version = "0.12.23" }
serde = "1.0.219"
serde_json = "1.0.143"
songbird = { version = "0.5.0", default-features = true, features = [] }
symphonia = "0.5.4" # needed for yt-dlp playback
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.20"

[dependencies.serenity]
version = "0.12"
features = ["client", "voice"]
