[package]
name = "discordmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.6.1", default-features = false, features = ["cache"] }
rand = "0.9.2"
reqwest = { default-features = false, features = [
    "stream", "rustls-tls"
], version = "0.12.28" }
rspotify = { version = "0.16.1", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.149"
songbird = "0.6.0"
symphonia = "0.5.5" # needed for yt-dlp playback
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.22"

[dependencies.serenity]
version = "0.12"
features = ["client", "voice"]
